# CPP_Learnings

./: CMakeLists.txt  dequeue.odt  docker_installation.odt  mutex_vs_semaphore.odt  queue vs dequeue.drawio  vector_vs_queue.odt
ATOI_STOI/: atoi.cpp  binary_to_all_types.cpp  binary_to_octal.cpp  char_to_integer.cpp  stoi.cpp
AbstractClass/: a.out  abstractclass.cpp
Array_or_Pointer/: a.out  array_of_pointer.cpp  array_sort_by_array.cpp  array_sort_by_vector.cpp  const_understanding_on_pointers.cpp  dangling_pointer.cpp  find_and_distance.cpp  function_pointer.cpp  iterator_deep.cpp  l_r_value_reference.cpp  pointer.cpp  pointer_arithematic.cpp  pointer_as_argument.cpp  r_value_reference.cpp  string_to_integer.cpp
Binary_Literal/: a.out
Blocks_Scope/: blocks_understanding.cpp
CIN/: cin_findings.cpp
CMake/: CMakeLists.txt  read_me.txt
CMake/CMake_Prac_5/: CMakeLists.txt  DequeQueue.h  main.cpp
CMake/CMake_Prac_6/: CMakeLists.txt  SomeClass.cpp  SomeClass.h  types_of_exceptions.cpp
CMake/CMake_Prac_7/: Abstraction.cpp  Abstraction.h  CMakeLists.txt  main.cpp
CMake/CMake_Prac_8/: CMakeLists.txt  InterfaceClass.cpp  InterfaceClass.h  unique_ptr.cpp
Class/: a.out  class_pointers.cpp  dynamic_mem_alloc.cpp  object_print.cpp  print_object.cpp  sizeof_class_understanding.cpp  this_understanding.cpp  ways_of_accessing.cpp
Command_Line_Args/: command_line_arguments.cpp
Const_Keyword/: a.out  const_understanding.cpp  const_variations.cpp
Dangling_MemoryLeak/: dangling_pointer.cpp  memory_leak.cpp
Decltype/: a.out  decltype.cpp  function_r_as_decltype.cpp
DesignPatterns/: abstract_factory_pattern.cpp  factory_pattern.cpp  singleton_pattern.cpp
Dynamic_Memory_Allocation/: a.out
Enum/: enum.cpp  enum_class.cpp
Exception/: a.out  custom_exceptions.cpp  exceptions.cpp
Explicit/: a.out  explicit.cpp  explicit_understanding.cpp  explicit_understanding_deep.cpp
Floor_Division/: floor_division.cpp
Friend_Keyword/: a.out  friend_keyword.cpp
Function/: function_parts.cpp
Function_Pointer/: function_pointer.cpp
GetLine/: getline.cpp
Header_Gaurd/: add.h  calculator.cpp  divide.h  mul.h  sub.h
Inheritance/: a.out  class_and_structure_inheritance.cpp  inheritance.cpp
Inline/: inline_function.cpp
Interface/: a.out  interface_class.cpp
Lambda_Functions/: a.out  functions_2.cpp  generalized_lambda.cpp  lambda_function_capture_clause.cpp  lambda_function_vector.cpp  lambda_functions.cpp  lambda_functions_deep.cpp  lambda_try_Aug_26.cpp  lamda_and_std_function.cpp
Linked_List/: a.out  custom_linked_list.cpp
Local_Global_Variable/: local_vs_global_variable.cpp  local_vs_global_variable.s
Loop/: a.out  infinite_loop.cpp  tricky_for_if.cpp  tricky_for_while_1.cpp  tricky_for_while_2.cpp
Macro/: a.out  macro_comment.cpp  object_like_macro.cpp
Macro_Understanding/: if_def_understanding.cpp  macro_comments.cpp  macro_function.cpp  macro_function_preprocessed_code.cpp  macro_understanding.cpp  macro_understanding_1.cpp  macro_understanding_3.cpp
Modularity/Modularity_0/: CMakeLists.txt  program.cpp  program.h
NameSpace_Understanding/: a.out  understanding_name_space.cpp  understanding_name_space.h
Namespace/: custom_namespace.cpp  multiple_namespace_on_same_grp.cpp  namespace_pollution.cpp  namespace_understanding_1.cpp  namespace_understanding_2.cpp  namespace_understanding_2.s
New_Keyword/: a.out  new_keyword.cpp  new_operator_overloading.cpp
Null_vs_Nullptr/: null_vs_nullptr.cpp
Operator_Overloading/: a.out  operator_overloading.cpp
Pointer/: double_pointer.cpp  null_vs_nullptr_dereferencing.cpp  object_with_new.cpp  pointer_deep.cpp  two_D_pointer.cpp
Pointers/: a.out  double_pointer.cpp  simple_pointer.cpp
Polymorphism/: a.out  dynamic_polymorphism.cpp  static_polymorphism.cpp
Process_Parts/: process_parts.cpp
References/: a.out  l_and_r_value_reference.cpp  reference_understandding.cpp  references.cpp  simple_and_deep_reference_code.cpp  simple_reference_code.cpp
Register/: a.out
Return_Type_Deduction/: a.out  decltype_as_return_type_of_function.cpp  decltype_as_return_type_of_function.cpp_  simple_return_type_deduction.cpp
STL/: array.cpp  array_work_like_queue.cpp  iterate_stl.cpp  queue.cpp  queue_to_array.cpp
Shallow_Deep_COPY/: deep_copy_0.cpp  shallow_copy_1.cpp
Shallow_Deep_COPY/Shallow_and_Deep_copy/: CMakeLists.txt
Small_Problems/: matrix_transpose.cpp  swap.cpp
Smart_Pointer/: a.out  unique_shared_weak_pointer.cpp
Static_Keyword/: a.out  static_keyword.cpp  static_understanding.cpp
Stream/: ostringstream.cpp  stringstream.cpp
String_and_C_Style_Print/: String_Functions.cpp  a.out  char_functions.cpp  charpointer_vs_string.cpp  length_comparision.cpp  print.cpp  string_erase_substr.cpp  (+7 more)
(+469 files in other folders)
